# notebooklm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose-prod.yml  docker-compose.yml  miniflux.md  plan.md  start-dev.sh  test.md
backend/: .env.example  .gitignore  Dockerfile.scheduler  README.md  __init__.py  alembic.ini  design.md  plan.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260307_0001_scaffold_bootstrap.py  20260307_0002_p0_auth_notebooks_notes.py  20260308_0003_search_sessions.py  20260308_0004_articles_jobs.py  20260308_0005_article_tsv.py  20260308_0006_pgvector_chunks.py  20260309_0007_ai_summary_chat.py  20260309_0008_embedding_runtime_keys.py  20260309_0009_fixed_embedding_dim.py  20260315_0010_article_block_graph_quality.py  20260315_0011_widen_dedupe_key.py  20260315_0012_summary_caches.py  20260318_0013_schema_comments_cleanup.py  20260320_0014_article_ingest_v2_columns.py  20260323_0015_summary_chat_v2.py  20260325_0016_notebook_tags_and_recent_open.py  20260325_0017_note_tags.py  20260325_0018_auth_aux_tables.py  20260328_0019_article_highlights.py  20260328_0019_compat_placeholder.py  20260329_0019_rss_feeds_and_article_rss_fields.py  20260329_0020_summary_audit_and_compression_cache.py  20260329_0021_summary_cache_runtime_identity.py  20260329_0022_job_dead_letters.py  20260329_0023_article_highlights.py  20260331_0024_rss_history_entries.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  health.py  middleware.py  response.py  sse.py
backend/app/core/: __init__.py  config.py  constant.py  (+2 more)
backend/evals/: README.md  __init__.py  judges.py  langsmith_sync.py  reporters.py  run.py
backend/scripts/: seed_http_demo_data.py
(+732 files in other folders)
